--- a/sachnoi/templates/app/discover.html
+++ b/sachnoi/templates/app/discover.html
@@ -502,6 +502,42 @@
         </div>
     </div>
     <!-- end section-four-->
+
+    <footer> 
+        <div  class="footer-content">
+            <div class="quote">
+                <p>"Bạn định đợi tới bao giờ
+                    <br>
+                    mới mong cầu điều tốt đẹp nhất cho bản thân?"
+                </p> 
+            </div>
+            <div class="member">
+                <h3>Đội ngũ xây dựng và phát triển web:</h3>
+                <ul>
+                    <li>Mentor: Đinh Quốc Đại</li>
+                    <li>Nguyễn Đăng Huân</li>
+                    <li>Đỗ Sỹ Việt</li>
+                    <li>Vũ Mạnh Hiếu</li>
+                    <li>Võ Minh Trí</li>
+                    <li>Vũ Thị Thu Duyên</li>
+                </ul>
+            </div>
+            <div class="contact">
+                <p>Chúng tôi luôn sẵn sàng lắng nghe ý kiến của các bạn</p>
+                <p>Liên hệ với chúng tôi:</p>
+                <ul>
+                    <li>Email: huannguen1232004@gmail.com</a></li>
+                    <li>Điện thoại: +84 865 961 383</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="end-footer"> 
+            <p> 
+                Một trang web thành công không chỉ là công trình của đội ngũ phát triển. 
+                <br>Vì vậy, cho phép chúng tôi gửi lời cảm ơn đến các bạn đọc, các thính giả đã góp phần làm nên thành công của chúng tôi.
+            </p>
+        </div>
+    </footer>
     <script>
         document.addEventListener("DOMContentLoaded", function() {
             const userImage = document.getElementById("user-image");
