--- a/sachnoi/templates/app/category.html
+++ b/sachnoi/templates/app/category.html
@@ -114,7 +114,7 @@
                 <div class="sidebar categoryr-item-sidebar">
                     <div class="book-time">
                         <i class="fa-regular fa-clock"></i>
-                        <span class="time">2 giờ, 07 phút</span>
+                        <span class="time audio-duration" data-src="{{ book.audio_file.url }}"> Đang tải...</span>
                     </div>
                     <div class="icon">
                         <i class="fa-solid fa-circle-play"></i>
@@ -148,7 +148,7 @@
                 <div class="sidebar categoryr-item-sidebar">
                     <div class="book-time">
                         <i class="fa-regular fa-clock"></i>
-                        <span class="time">2 giờ, 07 phút</span>
+                        <span class="time audio-duration" data-src="{{ book.audio_file.url }}"> Đang tải...</span>
                     </div>
                     <div class="icon">
                         <i class="fa-solid fa-circle-play"></i>
@@ -181,7 +181,7 @@
                 <div class="sidebar categoryr-item-sidebar">
                     <div class="book-time">
                         <i class="fa-regular fa-clock"></i>
-                        <span class="time">2 giờ, 07 phút</span>
+                        <span class="time audio-duration" data-src="{{ book.audio_file.url }}"> Đang tải...</span>
                     </div>
                     <div class="icon">
                         <i class="fa-solid fa-circle-play"></i>
@@ -213,7 +213,7 @@
                 <div class="sidebar categoryr-item-sidebar">
                     <div class="book-time">
                         <i class="fa-regular fa-clock"></i>
-                        <span class="time">2 giờ, 07 phút</span>
+                        <span class="time audio-duration" data-src="{{ book.audio_file.url }}"> Đang tải...</span>
                     </div>
                     <div class="icon">
                         <i class="fa-solid fa-circle-play"></i>
@@ -245,7 +245,7 @@
                 <div class="sidebar categoryr-item-sidebar">
                     <div class="book-time">
                         <i class="fa-regular fa-clock"></i>
-                        <span class="time">2 giờ, 07 phút</span>
+                        <span class="time audio-duration" data-src="{{ book.audio_file.url }}"> Đang tải...</span>
                     </div>
                     <div class="icon">
                         <i class="fa-solid fa-circle-play"></i>
@@ -277,7 +277,7 @@
                 <div class="sidebar categoryr-item-sidebar">
                     <div class="book-time">
                         <i class="fa-regular fa-clock"></i>
-                        <span class="time">2 giờ, 07 phút</span>
+                        <span class="time audio-duration" data-src="{{ book.audio_file.url }}"> Đang tải...</span>
                     </div>
                     <div class="icon">
                         <i class="fa-solid fa-circle-play"></i>
@@ -409,6 +409,19 @@
         });    
         
     </script>
-    
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            document.querySelectorAll(".audio-duration").forEach(span => {
+                let audio = new Audio(span.dataset.src);
+                audio.addEventListener("loadedmetadata", () => {
+                    let duration = Math.round(audio.duration);
+                    // giải thích tẹo nha cái duration là a dùng để lấy thời gian trong file sách tương ứng ở trên database á
+                    let minutes = Math.floor(duration / 60);
+                    let seconds = duration % 60;
+                    span.textContent = ` ${minutes}:${seconds.toString().padStart(2, "0")}`;
+                });
+            });
+        });
+    </script>
 </body>
 </html>
