--- a/sachnoi/templates/app/trending_page.html
+++ b/sachnoi/templates/app/trending_page.html
@@ -83,6 +83,26 @@
 
     {% comment %} section-one {% endcomment %}
     <div class="container container-one">
+        <h1>Thịnh hành hôm nay</h1>
+        <ul>
+            {% for trend in trending_today %}
+                <li>{{ trend.book.title }} - {{ trend.views }} lượt xem</li>
+            {% endfor %}
+        </ul>
+
+        <h1>Thịnh hành tuần này</h1>
+        <ul>
+            {% for trend in trending_week %}
+                <li>{{ trend.book.title }} - {{ trend.views }} lượt xem</li>
+            {% endfor %}
+        </ul>
+
+        <h1>Thịnh hành tháng này</h1>
+        <ul>
+            {% for trend in trending_month %}
+                <li>{{ trend.book.title }} - {{ trend.views }} lượt xem</li>
+            {% endfor %}
+        </ul>
         <h1>Top sách trong tuần</h1>
         <div class="book-list">
             <a href="#" class="book-item">
