--- a/sachnoi/static/assets/css/author_page.css
+++ b/sachnoi/static/assets/css/author_page.css
@@ -33,6 +33,7 @@ body {
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     width: 200px;
+    height: 250px;
     padding: 15px;
     text-align: center;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -44,8 +45,8 @@ body {
   }
   
   .author-img {
-    width: 100%;
-    height: auto;
+    width: 150px;
+    height: 150px;
     border-radius: 50%;
     margin-bottom: 10px;
     object-fit: cover;
@@ -60,14 +61,24 @@ body {
   @media (max-width: 1200px) {
     .author-card {
       width: 150px;
+      height: 200px;
     }
     .author-name {
       font-size: 14px;
+    }
+    .author-img {
+      width: 120px;
+      height: 120px;
     }
   }
   @media (max-width: 480px) {
     .author-card {
       width: 120px;
+      height: 170px;
+    }
+    .author-img {
+      width: 90px;
+      height: 90px;
     }
   }
   @media (max-width: 320px) {
@@ -76,5 +87,9 @@ body {
     }
     .author-name {
       font-size: 12px;
+    }
+    .author-img {
+      width: 75px;
+      height: 75px;
     }
   }
